New Crowdin updates (#3)
* New translations app_en.arb (Romanian)

* New translations app_en.arb (French)

* New translations app_en.arb (Spanish)

* New translations app_en.arb (Afrikaans)

* New translations app_en.arb (Arabic)

* New translations app_en.arb (Catalan)

* New translations app_en.arb (Czech)

* New translations app_en.arb (Danish)

* New translations app_en.arb (German)

* New translations app_en.arb (Greek)

* New translations app_en.arb (Finnish)

* New translations app_en.arb (Hebrew)

* New translations app_en.arb (Hungarian)

* New translations app_en.arb (Italian)

* New translations app_en.arb (Japanese)

* New translations app_en.arb (Korean)

* New translations app_en.arb (Dutch)

* New translations app_en.arb (Norwegian)

* New translations app_en.arb (Polish)

* New translations app_en.arb (Portuguese)

* New translations app_en.arb (Russian)

* New translations app_en.arb (Serbian (Cyrillic))

* New translations app_en.arb (Swedish)

* New translations app_en.arb (Turkish)

* New translations app_en.arb (Ukrainian)

* New translations app_en.arb (Chinese Simplified)

* New translations app_en.arb (Chinese Traditional)

* New translations app_en.arb (Vietnamese)

* New translations app_en.arb (Hindi)

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,7 +1,7 @@
 {
   "about": "عن",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
+  "apiKey": "مفتاح API",
+  "apiRateLimits": "حدود معدل نقاط نهاية API",
   "apksToApk": "APKS إلى APK",
   "appDescription": "مجموعة من أدوات الهندسة العكسية.",
   "appTitle": "Revengi",
@@ -11,17 +11,17 @@
   "blutterDesc": "أداة التحليل الثنائي رفرفة",
   "cancel": "يلغي",
   "checkForUpdate": "تحقق للحصول على التحديثات",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
+  "confirmPassword": "تأكيد كلمة المرور",
+  "continueAsGuest": "الاستمرار كضيف",
+  "copiedToClipboard": "نسخ إلى الحافظة",
+  "createAccount": "إنشاء حساب",
   "dexRepair": "إصلاح DEX",
   "dexRepairDesc": "إصلاح ملفات DEX",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
+  "email": "البريد الإلكتروني",
+  "emailCond": "الرجاء إدخال عنوان Gmail صالح",
+  "enterEmail": "الرجاء إدخال البريد الإلكتروني",
+  "enterPassword": "الرجاء إدخال كلمة المرور",
+  "enterUsername": "الرجاء إدخال اسم المستخدم",
   "flutterAnalysis": "تحليل الرفرفة",
   "flutterAnalysisDesc": "تحليل libs رفرفة",
   "jniAnalysis": "تحليل JNI",
@@ -37,30 +37,30 @@
     }
   },
   "later": "لاحقاً",
-  "login": "Login",
+  "login": "تسجيل الدخول",
   "mergeSplitApks": "دمج انقسام APKs",
   "mtHook": "هوك",
   "mtHookDesc": "توليد خطافات محسنة MT",
   "ok": "نعم",
   "ollama_api_url": "عنوان ULLAMA BASE URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
+  "passLen": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل",
+  "passMisMatch": "كلمتا المرور غير متطابقتين",
+  "password": "كلمة المرور",
+  "pleaseConfirmPassword": "الرجاء تأكيد كلمة المرور",
   "preferences": "التفضيلات",
   "profile": "حساب تعريفي",
-  "register": "Register",
+  "register": "تسجيل",
   "reset": "إعادة ضبط",
   "selectLanguage": "حدد اللغة",
   "smaliGrammar": "قواعد سميلي",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
+  "suggestLogin": "لديك حساب؟ تسجيل الدخول",
+  "suggestRegister": "هل تحتاج إلى حساب؟ سجل",
   "theme": "سمة",
   "update": "تحديث",
   "updateAvailable": "التحديث المتاح",
   "updateAvailableMessage": "يتوفر إصدار جديد من التطبيق.هل ترغب في التحديث الآن؟",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "username": "اسم المستخدم",
+  "usernameCond": "يمكن أن يحتوي اسم المستخدم فقط على أحرف وأرقام وتسطير سطر",
+  "usernameLimit": "اسم المستخدم يجب أن يكون بين 5 و 15 حرفا",
+  "welcomeBack": "مرحبا بعودتك!"
 }
