--- a/lib/l10n/app_cs.arb
+++ b/lib/l10n/app_cs.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
-  "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "about": "O aplikaci",
+  "apiKey": "API klíč",
+  "apiRateLimits": "Limity API koncových bodů",
+  "apksToApk": "APKS do APK",
+  "appDescription": "Kolekce reverzních inženýrských nástrojů.",
+  "appTitle": "Revengi",
+  "batteryOptimization": "Optimalizace baterie",
+  "batteryOptimizationMessage": "Pro Android 13 a výše je třeba zakázat optimalizaci baterie, aby tato aplikace fungovala správně na pozadí.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Binární analytický nástroj Flutter",
+  "cancel": "Zrušit",
+  "checkForUpdate": "Zkontrolovat aktualizace",
+  "confirmPassword": "Potvrzení hesla",
+  "continueAsGuest": "Pokračovat jako hosta",
+  "copiedToClipboard": "Zkopírováno do schránky",
+  "createAccount": "Vytvořit účet",
+  "dexRepair": "Dex oprava",
+  "dexRepairDesc": "Opravit soubory DEX",
+  "email": "E-mailová adresa",
+  "emailCond": "Zadejte prosím platnou adresu Gmail",
+  "enterEmail": "Prosím, zadejte e-mail",
+  "enterPassword": "Zadejte prosím heslo",
+  "enterUsername": "Zadejte prosím uživatelské jméno",
+  "flutterAnalysis": "Analýza znečišťujících látek",
+  "flutterAnalysisDesc": "Analyzovat liby pro znečišťovatel",
+  "jniAnalysis": "Analýza JNI",
+  "jniAnalysisDesc": "Najít podpisy JNI v APK",
+  "language": "Jazyk: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "later": "Později",
+  "login": "Přihlásit se",
+  "mergeSplitApks": "Sloučit rozdělené APK",
+  "mtHook": "MT háček",
+  "mtHookDesc": "Generovat MT vylepšené háčky",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "ollama_api_url": "Základní URL OLLAMA",
+  "passLen": "Heslo musí mít alespoň 8 znaků",
+  "passMisMatch": "Hesla se neshodují",
+  "password": "Heslo",
+  "pleaseConfirmPassword": "Potvrďte prosím heslo",
+  "preferences": "Předvolby",
+  "profile": "Profil",
+  "register": "Registrovat se",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
+  "selectLanguage": "Vyberte jazyk",
   "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "suggestLogin": "Máte účet? Přihlašte se",
+  "suggestRegister": "Potřebujete účet? Registrovat",
+  "theme": "Téma",
+  "update": "Aktualizovat",
+  "updateAvailable": "Dostupná aktualizace",
+  "updateAvailableMessage": "Je dostupná nová verze aplikace. Chcete ji nyní aktualizovat?",
+  "username": "Uživatelské jméno",
+  "usernameCond": "Uživatelské jméno může obsahovat pouze písmena, čísla a podtržítko",
+  "usernameLimit": "Uživatelské jméno musí být v rozmezí 5 až 15 znaků",
+  "welcomeBack": "Vítejte zpátky!"
 }
