--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Über",
+  "apiKey": "API-Schlüssel",
+  "apiRateLimits": "API-Endpunktbegrenzung",
+  "apksToApk": "APKS zu APK",
+  "appDescription": "Eine Sammlung von Reverse Engineering Tools.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Akku-Optimierung",
+  "batteryOptimizationMessage": "Für Android 13 und höher müssen wir die Batterieoptimierung deaktivieren, damit diese App im Hintergrund korrekt funktioniert.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Flutter Binäranalyse-Tool",
+  "cancel": "Abbrechen",
+  "checkForUpdate": "Nach Updates suchen",
+  "confirmPassword": "Passwort bestätigen",
+  "continueAsGuest": "Als Gast fortfahren",
+  "copiedToClipboard": "In Zwischenablage kopiert",
+  "createAccount": "Konto erstellen",
+  "dexRepair": "Dex Reparatur",
+  "dexRepairDesc": "DEX-Dateien reparieren",
+  "email": "E-Mail",
+  "emailCond": "Bitte geben Sie eine gültige Gmail-Adresse ein",
+  "enterEmail": "Bitte E-Mail eingeben",
+  "enterPassword": "Bitte Passwort eingeben",
+  "enterUsername": "Bitte Benutzername eingeben",
+  "flutterAnalysis": "Flutter-Analyse",
+  "flutterAnalysisDesc": "Flutter-Bibliotheken analysieren",
+  "jniAnalysis": "JNI Analyse",
+  "jniAnalysisDesc": "JNI-Signaturen in APK finden",
+  "language": "Sprache: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "later": "Später",
+  "login": "Anmelden",
+  "mergeSplitApks": "Split APKs zusammenführen",
+  "mtHook": "MT-Haken",
+  "mtHookDesc": "MT Verbesserte Hooks generieren",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "ollama_api_url": "OLLAMA Basis-URL",
+  "passLen": "Passwort muss mindestens 8 Zeichen lang sein",
+  "passMisMatch": "Passwörter stimmen nicht überein",
+  "password": "Passwort",
+  "pleaseConfirmPassword": "Bitte bestätigen Sie das Passwort",
+  "preferences": "Einstellungen",
+  "profile": "Profil",
+  "register": "Registrieren",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Sprache auswählen",
+  "smaliGrammar": "Smali Grammatik",
+  "suggestLogin": "Haben Sie ein Konto? Anmelden",
+  "suggestRegister": "Brauchen Sie ein Konto? Registrieren",
+  "theme": "Thema",
+  "update": "Aktualisieren",
+  "updateAvailable": "Update verfügbar",
+  "updateAvailableMessage": "Eine neue Version der App ist verfügbar. Möchten Sie jetzt aktualisieren?",
+  "username": "Benutzername",
+  "usernameCond": "Benutzername darf nur Buchstaben, Zahlen und Unterstriche enthalten",
+  "usernameLimit": "Benutzername muss zwischen 5 und 15 Zeichen lang sein",
+  "welcomeBack": "Willkommen zurück!"
 }
