--- a/lib/l10n/app_el.arb
+++ b/lib/l10n/app_el.arb
@@ -1,31 +1,31 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Σχετικά",
+  "apiKey": "Κλειδί API",
+  "apiRateLimits": "Όρια Ρυθμού Τελικών Σημείων Api",
+  "apksToApk": "APKS στο APK",
+  "appDescription": "Συλλογή εργαλείων αντίστροφης μηχανικής.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Βελτιστοποίηση Μπαταρίας",
+  "batteryOptimizationMessage": "Για Android 13 και παραπάνω, Πρέπει να απενεργοποιήσετε τη βελτιστοποίηση της μπαταρίας για να λειτουργήσει σωστά αυτή η εφαρμογή στο παρασκήνιο.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
+  "blutterDesc": "Εργαλείο ανάλυσης δυαδικών πτερυγίων",
+  "cancel": "Ακύρωση",
+  "checkForUpdate": "Έλεγχος για ενημερώσεις",
+  "confirmPassword": "Επιβεβαίωση Κωδικού Πρόσβασης",
+  "continueAsGuest": "Συνέχεια ως επισκέπτης",
+  "copiedToClipboard": "Αντιγράφηκε στο πρόχειρο",
+  "createAccount": "Δημιουργία Λογαριασμού",
+  "dexRepair": "Επισκευή Dex",
+  "dexRepairDesc": "Επισκευή αρχείων DEX",
+  "email": "E-mail",
+  "emailCond": "Παρακαλώ εισάγετε μια έγκυρη διεύθυνση Gmail",
+  "enterEmail": "Παρακαλώ εισάγετε email",
+  "enterPassword": "Παρακαλώ εισάγετε κωδικό πρόσβασης",
+  "enterUsername": "Παρακαλώ εισάγετε όνομα χρήστη",
+  "flutterAnalysis": "Ανάλυση Flutter",
+  "flutterAnalysisDesc": "Αναλύστε τα χείλη Flutter",
+  "jniAnalysis": "Ανάλυση JNI",
+  "jniAnalysisDesc": "Βρείτε JNI υπογραφές στο APK",
   "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "Αργότερα",
+  "login": "Είσοδος",
+  "mergeSplitApks": "Συγχώνευση Διαχωρισμού Apk",
+  "mtHook": "MT Γάντζος",
+  "mtHookDesc": "Δημιουργία MT Ενισχυμένη Αγκίστρια",
+  "ok": "Εντάξει",
+  "ollama_api_url": "URL βάσης OLLAMA",
+  "passLen": "Ο κωδικός πρόσβασης πρέπει να περιέχει τουλάχιστον 8 χαρακτήρες",
+  "passMisMatch": "Οι κωδικοί πρόσβασης δεν ταιριάζουν",
+  "password": "Κωδικός",
+  "pleaseConfirmPassword": "Παρακαλώ επιβεβαιώστε τον κωδικό πρόσβασης",
+  "preferences": "Ρυθμίσεις",
+  "profile": "Προφίλ",
+  "register": "Εγγραφή",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Επιλογή Γλώσσας",
+  "smaliGrammar": "Γραμματική Σμάλι",
+  "suggestLogin": "Έχετε ένα λογαριασμό? Είσοδος",
+  "suggestRegister": "Χρειάζεστε λογαριασμό? Εγγραφή",
+  "theme": "Θέμα",
+  "update": "Ενημέρωση",
+  "updateAvailable": "Διαθέσιμη Ενημέρωση",
+  "updateAvailableMessage": "Μια νέα έκδοση της εφαρμογής είναι διαθέσιμη. Θα θέλατε να ενημερώσετε τώρα?",
+  "username": "Όνομα Χρήστη",
+  "usernameCond": "Το όνομα χρήστη μπορεί να περιέχει μόνο γράμματα, αριθμούς και κάτω παύλα",
+  "usernameLimit": "Το όνομα χρήστη πρέπει να είναι μεταξύ 5 και 15 χαρακτήρων",
+  "welcomeBack": "Καλώς Ήρθατε!"
 }
