--- a/lib/l10n/app_fi.arb
+++ b/lib/l10n/app_fi.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Tietoja",
+  "apiKey": "Api Avain",
+  "apiRateLimits": "Api Päättymispisteiden Nopeusrajat",
+  "apksToApk": "APKS APK",
+  "appDescription": "Kokoelma kääntöteknisiä työkaluja.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Akun Optimointi",
+  "batteryOptimizationMessage": "Android-laitteelle 13 ja sitä vanhemmalle Meidän on poistettava akun optimointi käytöstä, jotta tämä sovellus toimisi kunnolla taustalla.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Flutter binaarinen analyysityökalu",
+  "cancel": "Peruuta",
+  "checkForUpdate": "Tarkista päivitykset",
+  "confirmPassword": "Vahvista Salasana",
+  "continueAsGuest": "Jatka vieraana",
+  "copiedToClipboard": "Kopioitu leikepöydälle",
+  "createAccount": "Luo Tili",
+  "dexRepair": "Dex Korjaus",
+  "dexRepairDesc": "Korjaa DEX-tiedostot",
+  "email": "Sähköposti",
+  "emailCond": "Syötä kelvollinen Gmail-osoite",
+  "enterEmail": "Syötä sähköposti",
+  "enterPassword": "Anna salasana",
+  "enterUsername": "Syötä käyttäjänimi",
+  "flutterAnalysis": "Flutterin Analyysi",
+  "flutterAnalysisDesc": "Analysoi Flutter libs",
+  "jniAnalysis": "JNI- Analyysi",
+  "jniAnalysisDesc": "Etsi JNI allekirjoituksia APK",
+  "language": "Kieli: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "Myöhemmin",
+  "login": "Kirjaudu",
+  "mergeSplitApks": "Yhdistä Jaetut APK:t",
+  "mtHook": "MT Koukku",
+  "mtHookDesc": "Luo Mt Enhanced Koukut",
+  "ok": "OK",
+  "ollama_api_url": "OLLAMAn perusosoite",
+  "passLen": "Salasanan tulee olla vähintään 8 merkkiä pitkä",
+  "passMisMatch": "Salasanat eivät täsmää",
+  "password": "Salasana",
+  "pleaseConfirmPassword": "Vahvista salasana",
+  "preferences": "Asetukset",
+  "profile": "Profiili",
+  "register": "Rekisteröidy",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Valitse Kieli",
+  "smaliGrammar": "Smali Kielioppi",
+  "suggestLogin": "Onko sinulla tili? Kirjaudu",
+  "suggestRegister": "Tarvitsetko tilin? Rekisteröidy",
+  "theme": "Teema",
+  "update": "Päivitä",
+  "updateAvailable": "Päivitys Saatavilla",
+  "updateAvailableMessage": "Sovelluksen uusi versio on saatavilla. Haluatko päivittää nyt?",
+  "username": "Käyttäjätunnus",
+  "usernameCond": "Käyttäjätunnus voi sisältää vain kirjaimia, numeroita ja alaviivoja",
+  "usernameLimit": "Käyttäjänimen tulee olla 5-15 merkkiä pitkä.",
+  "welcomeBack": "Tervetuloa Takaisin!"
 }
