--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "À propos de",
+  "apiKey": "Clé API",
+  "apiRateLimits": "Limite de débit des points de terminaison de l'API",
+  "apksToApk": "APKS à APK",
+  "appDescription": "Une collection d'outils d'ingénierie inversée.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Optimisation de la batterie",
+  "batteryOptimizationMessage": "Pour Android 13 et plus, nous devons désactiver l'optimisation de la batterie pour que cette application fonctionne correctement en arrière-plan.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Outil d'analyse binaire Flutter",
+  "cancel": "Abandonner",
+  "checkForUpdate": "Vérifier les mises à jour",
+  "confirmPassword": "Confirmer le mot de passe",
+  "continueAsGuest": "Continuer en tant qu'invité",
+  "copiedToClipboard": "Copié dans le presse-papiers",
+  "createAccount": "Créer un compte",
+  "dexRepair": "Réparation de Dex",
+  "dexRepairDesc": "Réparer les fichiers DEX",
+  "email": "Courriel",
+  "emailCond": "Veuillez entrer une adresse Gmail valide",
+  "enterEmail": "Veuillez saisir votre adresse e-mail",
+  "enterPassword": "Veuillez entrer le mot de passe",
+  "enterUsername": "Veuillez entrer le nom d'utilisateur",
+  "flutterAnalysis": "Analyse de lutte",
+  "flutterAnalysisDesc": "Analyser les libs de lutte",
+  "jniAnalysis": "Analyse JNI",
+  "jniAnalysisDesc": "Trouver les signatures JNI dans l'APK",
+  "language": "Langue : {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "later": "Plus tard",
+  "login": "Se connecter",
+  "mergeSplitApks": "Fusionner les APK Split",
+  "mtHook": "Crochet MT",
+  "mtHookDesc": "Générer des crochets MT améliorés",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "ollama_api_url": "URL de base OLLAMA",
+  "passLen": "Le mot de passe doit comporter au moins 8 caractères",
+  "passMisMatch": "Les mots de passe ne correspondent pas",
+  "password": "Mot de passe",
+  "pleaseConfirmPassword": "Veuillez confirmer le mot de passe",
+  "preferences": "Préférences",
+  "profile": "Profil",
+  "register": "Inscription",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Sélectionner la langue",
+  "smaliGrammar": "Grammaire Smali",
+  "suggestLogin": "Vous avez un compte ? Connectez-vous",
+  "suggestRegister": "Besoin d'un compte ? Inscrivez-vous",
+  "theme": "Thème",
+  "update": "Mise à jour",
+  "updateAvailable": "Mise à jour disponible",
+  "updateAvailableMessage": "Une nouvelle version de l'application est disponible. Voulez-vous mettre à jour maintenant ?",
+  "username": "Nom d'utilisateur",
+  "usernameCond": "Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et des tirets bas",
+  "usernameLimit": "Le nom d'utilisateur doit contenir entre 5 et 15 caractères",
+  "welcomeBack": "Bienvenue!"
 }
