--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -1,32 +1,32 @@
 {
   "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
+  "apiKey": "API キー",
+  "apiRateLimits": "APIエンドポイントレート制限",
   "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "appDescription": "リバースエンジニアリングツールのコレクション。",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "バッテリー最適化",
+  "batteryOptimizationMessage": "Android 13 以降では、バックグラウンドで正常に動作するよう、このアプリのバッテリー最適化を無効にする必要があります。",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
+  "blutterDesc": "Flutter バイナリ解析ツール",
+  "cancel": "キャンセル",
+  "checkForUpdate": "アップデートの確認",
+  "confirmPassword": "パスワードの確認",
+  "continueAsGuest": "ゲストとして続ける",
+  "copiedToClipboard": "クリップボードにコピーしました",
+  "createAccount": "アカウントを作成",
+  "dexRepair": "デックス修理",
+  "dexRepairDesc": "DEXファイルの修復",
+  "email": "Eメールアドレス",
+  "emailCond": "有効なGmailアドレスを入力してください",
+  "enterEmail": "メールアドレスを入力してください",
+  "enterPassword": "パスワードを入力してください",
+  "enterUsername": "ユーザー名を入力してください",
   "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "flutterAnalysisDesc": "Flutter libs を分析する",
+  "jniAnalysis": "JNI分析",
+  "jniAnalysisDesc": "APKでJNI署名を検索",
+  "language": "言語: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "後で",
+  "login": "ログイン",
+  "mergeSplitApks": "分割APKを統合",
+  "mtHook": "MTフック",
+  "mtHookDesc": "MT拡張フックを生成",
+  "ok": "OK",
+  "ollama_api_url": "OLLAMAベースURL",
+  "passLen": "パスワードは8文字以上でなければなりません",
+  "passMisMatch": "パスワードが一致しません",
+  "password": "パスワード",
+  "pleaseConfirmPassword": "パスワードを確認してください",
+  "preferences": "設定",
+  "profile": "プロフィール",
+  "register": "登録",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
+  "selectLanguage": "言語の選択",
   "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "suggestLogin": "アカウントをお持ちですか？ログイン",
+  "suggestRegister": "アカウントが必要ですか？登録",
+  "theme": "テーマ",
+  "update": "更新",
+  "updateAvailable": "アップデートがあります",
+  "updateAvailableMessage": "アプリの新しいバージョンが利用可能です。今すぐアップデートしますか？",
+  "username": "ユーザー名",
+  "usernameCond": "ユーザー名には、文字、数字、およびアンダースコアのみを含めることができます",
+  "usernameLimit": "ユーザー名は5文字以上15文字以下で入力してください",
+  "welcomeBack": "おかえりなさい！"
 }
