--- a/lib/l10n/app_nl.arb
+++ b/lib/l10n/app_nl.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Informatie",
+  "apiKey": "API Sleutel",
+  "apiRateLimits": "API Eindpunten Limieten",
+  "apksToApk": "APKS naar APK",
+  "appDescription": "Een verzameling omgekeerde engineering gereedschappen.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Batterij optimalisatie",
+  "batteryOptimizationMessage": "Voor Android 13 en hoger, moeten we batterij optimalisatie uitschakelen om deze app goed te laten werken op de achtergrond.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Flutter binaire analyse tool",
+  "cancel": "annuleren",
+  "checkForUpdate": "Controleren op updates",
+  "confirmPassword": "Bevestig wachtwoord",
+  "continueAsGuest": "Doorgaan als gast",
+  "copiedToClipboard": "Gekopieerd naar klembord",
+  "createAccount": "Account Aanmaken",
+  "dexRepair": "Dex Reparatie",
+  "dexRepairDesc": "Repareer DEX bestanden",
+  "email": "E-mailadres",
+  "emailCond": "Voer een geldig Gmail adres in",
+  "enterEmail": "Voer e-mailadres in",
+  "enterPassword": "Voer wachtwoord in",
+  "enterUsername": "Voer gebruikersnaam in",
+  "flutterAnalysis": "Flutter analyse",
+  "flutterAnalysisDesc": "Flutter libs analyseren",
+  "jniAnalysis": "JNI analyse",
+  "jniAnalysisDesc": "Zoek JNI handtekeningen in APK",
+  "language": "Taal: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -37,30 +37,30 @@
     }
   },
   "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "login": "Aanmelden",
+  "mergeSplitApks": "Split-APK's samenvoegen",
+  "mtHook": "MT Haak",
+  "mtHookDesc": "Genereer MT versterkte hooks",
+  "ok": "OK",
+  "ollama_api_url": "OLLAMA basis-URL",
+  "passLen": "Wachtwoord moet ten minste 8 tekens bevatten",
+  "passMisMatch": "Wachtwoorden komen niet overeen",
+  "password": "Wachtwoord",
+  "pleaseConfirmPassword": "Bevestig het wachtwoord",
+  "preferences": "named@@0",
+  "profile": "Profiel",
+  "register": "Registreren",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Selecteer Taal",
+  "smaliGrammar": "Smali Grammatica",
+  "suggestLogin": "Heb je een account? Log in",
+  "suggestRegister": "Een account nodig? Registreren",
+  "theme": "Thema",
+  "update": "Vernieuwen",
+  "updateAvailable": "Update beschikbaar",
+  "updateAvailableMessage": "Er is een nieuwe versie van de app beschikbaar. Wil je nu bijwerken?",
+  "username": "Gebruikersnaam",
+  "usernameCond": "Gebruikersnaam mag alleen letters, cijfers en onderstrepingstekens bevatten",
+  "usernameLimit": "Gebruikersnaam moet tussen 5 en 15 tekens lang zijn",
+  "welcomeBack": "Welkom terug!"
 }
