--- a/lib/l10n/app_pl.arb
+++ b/lib/l10n/app_pl.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
-  "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "about": "O programie",
+  "apiKey": "Klucz API",
+  "apiRateLimits": "Wartości graniczne punktów końcowych API",
+  "apksToApk": "APKS do APK",
+  "appDescription": "Zbiór narzędzi inżynierii odwrotnej.",
+  "appTitle": "Odwołanie Engi",
+  "batteryOptimization": "Optymalizacja baterii",
+  "batteryOptimizationMessage": "W przypadku Android 13 i powyżej musimy wyłączyć optymalizację baterii, aby aplikacja działała poprawnie w tle.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Narzędzie analizy binarnej Flutter",
+  "cancel": "Anuluj",
+  "checkForUpdate": "Sprawdź aktualizacje",
+  "confirmPassword": "Potwierdź hasło",
+  "continueAsGuest": "Kontynuuj jako gość",
+  "copiedToClipboard": "Skopiowano do schowka",
+  "createAccount": "Utwórz konto",
+  "dexRepair": "Naprawa dex",
+  "dexRepairDesc": "Napraw pliki DEX",
+  "email": "E-mail",
+  "emailCond": "Wprowadź prawidłowy adres Gmail",
+  "enterEmail": "Wprowadź adres e-mail",
+  "enterPassword": "Wprowadź hasło",
+  "enterUsername": "Wprowadź nazwę użytkownika",
+  "flutterAnalysis": "Analiza strumienia powietrza",
+  "flutterAnalysisDesc": "Analizuj biblioteki Fluttera",
+  "jniAnalysis": "Analiza JNI",
+  "jniAnalysisDesc": "Znajdź podpisy JNI w APK",
+  "language": "Język: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
+  "later": "Później",
+  "login": "Logowanie",
+  "mergeSplitApks": "Scalanie podzielonych APK",
   "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "mtHookDesc": "Generuj zaawansowane hooki MT",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "ollama_api_url": "Podstawowy URL OLLAMA",
+  "passLen": "Hasło musi mieć co najmniej 8 znaków",
+  "passMisMatch": "Hasła nie pasują",
+  "password": "Hasło",
+  "pleaseConfirmPassword": "Proszę potwierdzić hasło",
+  "preferences": "Ustawienia",
+  "profile": "Profil",
+  "register": "Rejestracja",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
+  "selectLanguage": "Wybierz język",
   "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "suggestLogin": "Masz konto? Zaloguj się",
+  "suggestRegister": "Potrzebujesz konta? Zarejestruj się",
+  "theme": "Motyw",
+  "update": "Aktualizuj",
+  "updateAvailable": "Dostępna aktualizacja",
+  "updateAvailableMessage": "Dostępna jest nowa wersja aplikacji. Czy chcesz teraz zaktualizować?",
+  "username": "Nazwa użytkownika",
+  "usernameCond": "Nazwa użytkownika może zawierać tylko litery, cyfry i podkreślenia",
+  "usernameLimit": "Nazwa użytkownika musi mieć od 5 do 15 znaków",
+  "welcomeBack": "Witaj ponownie!"
 }
