--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Om",
+  "apiKey": "API Nøgle",
+  "apiRateLimits": "API Endepunkter Rate Grænser",
+  "apksToApk": "APKS til APK",
+  "appDescription": "En samling af reverse engineering værktøjer.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Batteri Optimering",
+  "batteryOptimizationMessage": "For Android 13 og derover, Vi er nødt til at deaktivere batterioptimering for denne app for at fungere korrekt i baggrunden.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Værktøj til binær analyse af flutter",
+  "cancel": "Annuller",
+  "checkForUpdate": "Søg efter opdateringer",
+  "confirmPassword": "Bekræft Adgangskode",
+  "continueAsGuest": "Fortsæt som gæst",
+  "copiedToClipboard": "Kopieret til udklipsholder",
+  "createAccount": "Opret Konto",
+  "dexRepair": "Dex Reparation",
+  "dexRepairDesc": "Reparer DEX filer",
+  "email": "E-mail",
+  "emailCond": "Indtast en gyldig Gmail-adresse",
+  "enterEmail": "Indtast venligst e-mail",
+  "enterPassword": "Indtast venligst adgangskode",
+  "enterUsername": "Indtast venligst brugernavn",
+  "flutterAnalysis": "Analyse Af Flutter",
+  "flutterAnalysisDesc": "Analyser Flutter libs",
+  "jniAnalysis": "JNI Analyse",
+  "jniAnalysisDesc": "Find JNI signaturer i APK",
+  "language": "Sprog: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
+  "later": "Senere",
   "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
+  "mergeSplitApks": "Flet Split APKs",
   "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
+  "mtHookDesc": "Generere MT Forbedrede Kroge",
+  "ok": "OK",
   "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "passLen": "Adgangskoden skal være på mindst 8 tegn",
+  "passMisMatch": "Adgangskoder stemmer ikke overens",
+  "password": "Adgangskode",
+  "pleaseConfirmPassword": "Bekræft venligst adgangskode",
+  "preferences": "Præferencer",
+  "profile": "Profil",
+  "register": "Registrer",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Vælg Sprog",
+  "smaliGrammar": "Smali Grammatik",
+  "suggestLogin": "Har du en konto? Log ind",
+  "suggestRegister": "Har du brug for en konto?",
+  "theme": "Tema",
+  "update": "Opdater",
+  "updateAvailable": "Opdatering Tilgængelig",
+  "updateAvailableMessage": "En ny version af appen er tilgængelig. Vil du opdatere nu?",
+  "username": "Brugernavn",
+  "usernameCond": "Brugernavn kan kun indeholde bogstaver, tal og understregning",
+  "usernameLimit": "Brugernavn skal være mellem 5 og 15 tegn",
+  "welcomeBack": "Velkommen Tilbage!"
 }
