--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,31 +1,31 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
+  "about": "Acerca de",
+  "apiKey": "Clave API",
+  "apiRateLimits": "Límites de Tasa de Endpoints API",
+  "apksToApk": "APKS a APK",
   "appDescription": "Una colección de herramientas de ingeniería inversa.",
-  "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "appTitle": "Revengi",
+  "batteryOptimization": "Optimización de la batería",
+  "batteryOptimizationMessage": "Para Android 13 o superior, necesitamos deshabilitar la optimización de la batería para que esta aplicación funcione correctamente en segundo plano.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
+  "blutterDesc": "Herramienta de análisis binario del flujón",
+  "cancel": "Cancelar",
+  "checkForUpdate": "Buscar actualizaciones",
+  "confirmPassword": "Confirmar contraseña",
+  "continueAsGuest": "Continuar como invitado",
+  "copiedToClipboard": "Copiado al portapapeles",
+  "createAccount": "Crear cuenta",
+  "dexRepair": "Reparar Dex",
+  "dexRepairDesc": "Reparar archivos DEX",
+  "email": "E-mail",
+  "emailCond": "Por favor, introduzca una dirección de Gmail válida",
+  "enterEmail": "Por favor ingrese email",
+  "enterPassword": "Por favor, introduzca la contraseña",
+  "enterUsername": "Por favor ingrese nombre de usuario",
+  "flutterAnalysis": "Análisis de Flutter",
+  "flutterAnalysisDesc": "Analizar librerías de Flutter",
+  "jniAnalysis": "Análisis de JNI",
+  "jniAnalysisDesc": "Encontrar firmas JNI en APK",
   "language": "Idioma: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -37,30 +37,30 @@
     }
   },
   "later": "Luego",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "login": "Ingresar",
+  "mergeSplitApks": "Combinar APKs separados",
+  "mtHook": "Gancho MT",
+  "mtHookDesc": "Generar Hooks Mejorados MT",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
+  "ollama_api_url": "URL base OLLAMA",
+  "passLen": "La contraseña debe tener al menos 8 caracteres",
+  "passMisMatch": "Las contraseñas no coinciden",
+  "password": "Contraseña",
+  "pleaseConfirmPassword": "Por favor confirme la contraseña",
   "preferences": "Preferencias",
   "profile": "Perfil",
-  "register": "Register",
+  "register": "Registrarse",
   "reset": "Reset",
   "selectLanguage": "Seleccionar idioma",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
+  "smaliGrammar": "Gramática Smali",
+  "suggestLogin": "¿Tienes una cuenta? Iniciar sesión",
+  "suggestRegister": "¿Necesitas una cuenta? Regístrate",
   "theme": "Tema",
-  "update": "Update",
+  "update": "Actualizar",
   "updateAvailable": "Actualización disponible",
   "updateAvailableMessage": "Hay una nueva versión de la aplicación disponible. ¿Quieres actualizar ahora?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "username": "Usuario",
+  "usernameCond": "El nombre de usuario solo puede contener letras, números y subrayado",
+  "usernameLimit": "El nombre de usuario debe tener entre 5 y 15 caracteres",
+  "welcomeBack": "¡Bienvenido!"
 }
