--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Informazioni",
+  "apiKey": "Chiave API",
+  "apiRateLimits": "Limiti Di Tasso Endpoint Api",
+  "apksToApk": "APKS a APK",
+  "appDescription": "Una collezione di strumenti di reverse engineering.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Ottimizzazione Batteria",
+  "batteryOptimizationMessage": "Per Android 13 e versioni successive, dobbiamo disabilitare l'ottimizzazione della batteria per consentire a questa app di funzionare correttamente in background.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
+  "blutterDesc": "Strumento di analisi binaria del flutter",
+  "cancel": "Annulla",
+  "checkForUpdate": "Controlla aggiornamenti",
+  "confirmPassword": "Conferma Password",
+  "continueAsGuest": "Continua come ospite",
+  "copiedToClipboard": "Copiato negli appunti",
+  "createAccount": "Crea Account",
+  "dexRepair": "Riparazione Dex",
+  "dexRepairDesc": "Ripara file DEX",
   "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "emailCond": "Inserisci un indirizzo Gmail valido",
+  "enterEmail": "Inserisci l'email",
+  "enterPassword": "Inserisci la password",
+  "enterUsername": "Inserisci il nome utente",
+  "flutterAnalysis": "Analisi Flutter",
+  "flutterAnalysisDesc": "Analizza libs Flutter",
+  "jniAnalysis": "Analisi JNI",
+  "jniAnalysisDesc": "Trova firme JNI nell'APK",
+  "language": "Lingua: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
+  "later": "Dopo",
+  "login": "Accedi",
+  "mergeSplitApks": "Unisci APK Divisi",
   "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "mtHookDesc": "Genera MT Enhanced Hooks",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
+  "ollama_api_url": "Url base OLLAMA",
+  "passLen": "La password deve contenere almeno 8 caratteri",
+  "passMisMatch": "Le password non corrispondono",
   "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "pleaseConfirmPassword": "Conferma la password",
+  "preferences": "Preferenze",
+  "profile": "Profilo",
+  "register": "Registrati",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
+  "selectLanguage": "Seleziona Lingua",
+  "smaliGrammar": "Grammatica Smali",
+  "suggestLogin": "Hai un account? Accedi",
+  "suggestRegister": "Hai bisogno di un account? Registrati",
+  "theme": "Tema",
+  "update": "Aggiorna",
+  "updateAvailable": "Aggiornamento Disponibile",
+  "updateAvailableMessage": "È disponibile una nuova versione dell'app. Vuoi aggiornare adesso?",
   "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "usernameCond": "Il nome utente può contenere solo lettere, numeri e underscore",
+  "usernameLimit": "Il nome utente deve essere compreso tra 5 e 15 caratteri",
+  "welcomeBack": "Bentornato!"
 }
