--- a/lib/l10n/app_no.arb
+++ b/lib/l10n/app_no.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Om",
+  "apiKey": "API-nøkkel (Automatic Translation)",
+  "apiRateLimits": "API Endepunkter Grense (Automatic Translation)",
+  "apksToApk": "APKS til APK",
+  "appDescription": "En samling av omvendt ingeniørverktøy.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Batterioptimalisering",
+  "batteryOptimizationMessage": "Vi må deaktivere batterioptimalisering for Android 13 og eldre for at denne appen skal fungere ordentlig i bakgrunnen.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Verktøy for binær analyse",
+  "cancel": "Avbryt",
+  "checkForUpdate": "Se etter oppdateringer",
+  "confirmPassword": "Bekreft passord",
+  "continueAsGuest": "Fortsett som gjest",
+  "copiedToClipboard": "Kopiert til utklippstavle",
+  "createAccount": "Opprett konto",
+  "dexRepair": "Dex reparasjon",
+  "dexRepairDesc": "Reparer DEX filer",
+  "email": "E-post",
+  "emailCond": "Vennligst skriv inn en gyldig Gmail-adresse",
+  "enterEmail": "Skriv inn e-post adressen",
+  "enterPassword": "Vennligst angi passord",
+  "enterUsername": "Skriv inn brukernavn",
+  "flutterAnalysis": "Flutter analyse",
+  "flutterAnalysisDesc": "Analyser libs",
+  "jniAnalysis": "JNI Analyse",
+  "jniAnalysisDesc": "Finn JNI signaturer i APK",
+  "language": "Språk: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "Senere",
+  "login": "Innlogging",
+  "mergeSplitApks": "Slå sammen delte APKer",
+  "mtHook": "MT Lastkrok",
+  "mtHookDesc": "Generer MT Enhanced Hooks",
+  "ok": "OK",
+  "ollama_api_url": "OLLAMA grunns-URL",
+  "passLen": "Passordet må være minst 8 tegn",
+  "passMisMatch": "Passordene samsvarer ikke",
+  "password": "Passord",
+  "pleaseConfirmPassword": "Bekreft passord",
+  "preferences": "Innstillinger",
+  "profile": "Profil",
+  "register": "Registrer",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Velg språk",
+  "smaliGrammar": "Smali grammatikk",
+  "suggestLogin": "Har du en konto? Logg inn",
+  "suggestRegister": "Trenger du en konto? Registrer",
+  "theme": "Tema",
+  "update": "Oppdater",
+  "updateAvailable": "Oppdatering tilgjengelig",
+  "updateAvailableMessage": "En ny versjon av appen er tilgjengelig. Ønsker du å oppdatere nå?",
+  "username": "Brukernavn",
+  "usernameCond": "Brukernavnet kan bare inneholde bokstaver, tall og understrekingstegn",
+  "usernameLimit": "Brukernavnet må være mellom 5 og 15 tegn",
+  "welcomeBack": "Velkommen tilbake!"
 }
