--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "SOBRE",
+  "apiKey": "Chave de API",
+  "apiRateLimits": "Taxa de API Endpoints",
+  "apksToApk": "APKS para APK",
+  "appDescription": "Uma coleção de ferramentas de engenharia reversa.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Otimização de bateria",
+  "batteryOptimizationMessage": "Para o Android 13 e superior, precisamos desativar a otimização de bateria para que esse aplicativo funcione corretamente em segundo plano.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Ferramenta de análise binária flamejante",
+  "cancel": "cancelar",
+  "checkForUpdate": "Procurar por atualizações",
+  "confirmPassword": "Confirmar senha",
+  "continueAsGuest": "Continuar como Convidado",
+  "copiedToClipboard": "Copiado para o clipboard",
+  "createAccount": "Criar conta",
+  "dexRepair": "Reparo de Dex",
+  "dexRepairDesc": "Reparar arquivos DEX",
+  "email": "e-mail",
+  "emailCond": "Por favor, insira um endereço de Gmail válido",
+  "enterEmail": "Por favor, digite e-mail",
+  "enterPassword": "Por favor, digite a senha",
+  "enterUsername": "Insira o nome de usuário",
+  "flutterAnalysis": "Análise de Flauta",
+  "flutterAnalysisDesc": "Analisar tampas flamejantes",
+  "jniAnalysis": "Análise JNI",
+  "jniAnalysisDesc": "Encontre assinaturas do JNI no APK",
+  "language": "Idioma: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
+  "later": "Mais tarde",
+  "login": "Conectar-se",
+  "mergeSplitApks": "Fundir APKs divididos",
   "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "mtHookDesc": "Gerar MT Hooks Aprimorados",
+  "ok": "OK",
+  "ollama_api_url": "Base URL OLLAMA",
+  "passLen": "A senha deve ter pelo menos 8 caracteres",
+  "passMisMatch": "As senhas não coincidem",
+  "password": "Palavra-passe",
+  "pleaseConfirmPassword": "Por favor, confirme a senha",
+  "preferences": "Preferências:",
+  "profile": "Perfil",
+  "register": "Cadastrar",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Selecione o idioma",
+  "smaliGrammar": "Gramática Smali",
+  "suggestLogin": "Tem uma conta? Entrar",
+  "suggestRegister": "Precisa de uma conta? Registre-se",
+  "theme": "Tema",
+  "update": "Atualização",
+  "updateAvailable": "Atualização disponível",
+  "updateAvailableMessage": "Uma nova versão do app está disponível. Gostaria de atualizar agora?",
+  "username": "Usuário:",
+  "usernameCond": "O nome de usuário só pode conter letras, números e sublinhado",
+  "usernameLimit": "O nome de usuário deve ter entre 5 e 15 caracteres",
+  "welcomeBack": "Bem-vindo(a) de volta!"
 }
