--- a/lib/l10n/app_ro.arb
+++ b/lib/l10n/app_ro.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
-  "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "about": "Despre",
+  "apiKey": "Cheie API",
+  "apiRateLimits": "Limitele ratei de finalizare API",
+  "apksToApk": "APKS pentru APK",
+  "appDescription": "O colecție de instrumente de inginerie inversată.",
+  "appTitle": "Revendică",
+  "batteryOptimization": "Optimizare baterie",
+  "batteryOptimizationMessage": "Pentru Android 13 și mai mare, trebuie să dezactivăm optimizarea bateriei pentru ca această aplicație să funcționeze corespunzător în fundal.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Instrument de analiză binară Flutter",
+  "cancel": "Anulează",
+  "checkForUpdate": "Verifică pentru actualizări",
+  "confirmPassword": "Confirmare parolă",
+  "continueAsGuest": "Continuă ca Vizitator",
+  "copiedToClipboard": "Copiat în clipboard",
+  "createAccount": "Creare cont",
+  "dexRepair": "Reparație Dex",
+  "dexRepairDesc": "Repară fişierele DEX",
+  "email": "E-mail",
+  "emailCond": "Te rugăm să introduci o adresă Gmail validă",
+  "enterEmail": "Te rugăm să introduci e-mail",
+  "enterPassword": "Vă rugăm să introduceţi parola",
+  "enterUsername": "Introdu numele de utilizator",
+  "flutterAnalysis": "Analiză Flutter",
+  "flutterAnalysisDesc": "Analizează frezele Flutter",
+  "jniAnalysis": "Analiza JNI",
+  "jniAnalysisDesc": "Găsește semnăturile JNI în APK",
+  "language": "Limbă: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
+  "later": "Mai târziu",
+  "login": "Autentificare",
+  "mergeSplitApks": "Îmbinare APK-uri",
+  "mtHook": "Cârlig MT",
+  "mtHookDesc": "Genereaza Cârlige Imbunatite MT",
   "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "ollama_api_url": "URL bază OLLAMA",
+  "passLen": "Parola trebuie să conțină cel puțin 8 caractere",
+  "passMisMatch": "Parolele nu corespund",
+  "password": "Parolă",
+  "pleaseConfirmPassword": "Vă rugăm să confirmați parola",
+  "preferences": "Preferințe",
+  "profile": "Profil",
+  "register": "Inregistrare",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
+  "selectLanguage": "Selectaţi limba",
   "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "suggestLogin": "Ai un cont? Autentifică-te",
+  "suggestRegister": "Ai nevoie de un cont? Înregistrează-te",
+  "theme": "Tema",
+  "update": "Actualizare",
+  "updateAvailable": "Actualizare disponibilă",
+  "updateAvailableMessage": "O nouă versiune a aplicației este disponibilă. Doriți să actualizați acum?",
+  "username": "Nume",
+  "usernameCond": "Numele de utilizator poate conține doar litere, numere și underscore",
+  "usernameLimit": "Numele de utilizator trebuie să aibă între 5 și 15 caractere",
+  "welcomeBack": "Bine ai revenit!"
 }
