--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "О программе",
+  "apiKey": "Ключ API",
+  "apiRateLimits": "Пределы конечной ставки API",
+  "apksToApk": "APKS в АПК",
+  "appDescription": "Сбор обратных инженерных инструментов.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Оптимизация батареи",
+  "batteryOptimizationMessage": "Для Android 13 и выше нам нужно отключить оптимизацию батареи, чтобы это приложение работало правильно в фоновом режиме.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Инструмент бинарного анализа Flutter",
+  "cancel": "Отмена",
+  "checkForUpdate": "Проверить обновления",
+  "confirmPassword": "Подтверждение пароля",
+  "continueAsGuest": "Продолжить как гость",
+  "copiedToClipboard": "Скопировано в буфер обмена",
+  "createAccount": "Создать Аккаунт",
+  "dexRepair": "Ремонт",
+  "dexRepairDesc": "Восстановление DEX файлов",
+  "email": "Почта",
+  "emailCond": "Пожалуйста, введите действительный Gmail адрес",
+  "enterEmail": "Пожалуйста, введите email",
+  "enterPassword": "Введите пароль",
+  "enterUsername": "Пожалуйста, введите имя пользователя",
+  "flutterAnalysis": "Анализ Flutter",
+  "flutterAnalysisDesc": "Анализ библиотек Flutter",
+  "jniAnalysis": "JNI Анализ",
+  "jniAnalysisDesc": "Поиск JNI подписей в APK",
+  "language": "Язык: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
+  "later": "Позже",
+  "login": "Логин",
+  "mergeSplitApks": "Объединить API",
   "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "mtHookDesc": "Генерировать улучшенные хуки MT",
+  "ok": "Ок",
+  "ollama_api_url": "OLLAMA базовый URL",
+  "passLen": "Пароль должен содержать не менее 8 символов",
+  "passMisMatch": "Пароли не совпадают",
+  "password": "Пароль",
+  "pleaseConfirmPassword": "Подтвердите пароль",
+  "preferences": "Настройки",
+  "profile": "Профиль",
+  "register": "Регистрация",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
+  "selectLanguage": "Выберите язык",
   "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "suggestLogin": "Уже есть аккаунт? Войдите",
+  "suggestRegister": "Нужен аккаунт? Зарегистрироваться",
+  "theme": "Тема",
+  "update": "Обновить",
+  "updateAvailable": "Доступно обновление",
+  "updateAvailableMessage": "Доступна новая версия приложения. Хотите обновить сейчас?",
+  "username": "Имя пользователя",
+  "usernameCond": "Имя пользователя может содержать только буквы, цифры и подчеркивание",
+  "usernameLimit": "Имя пользователя должно быть от 5 до 15 символов",
+  "welcomeBack": "С возвращением!"
 }
