--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -1,32 +1,32 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
+  "about": "Om",
+  "apiKey": "API nyckel",
+  "apiRateLimits": "Gränser för API-slutpunkter",
+  "apksToApk": "APKS till APK",
+  "appDescription": "En samling av verktyg för omvänd konstruktion.",
   "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "batteryOptimization": "Batterioptimering",
+  "batteryOptimizationMessage": "För Android 13 och ovan, Vi måste inaktivera batterioptimering för att denna app ska fungera korrekt i bakgrunden.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
-  "language": "Language: {languageCode}",
+  "blutterDesc": "Flutter binära analysverktyg",
+  "cancel": "Avbryt",
+  "checkForUpdate": "Sök efter uppdateringar",
+  "confirmPassword": "Bekräfta lösenord",
+  "continueAsGuest": "Fortsätt som gäst",
+  "copiedToClipboard": "Kopierad till urklipp",
+  "createAccount": "Skapa konto",
+  "dexRepair": "Dex Reparation",
+  "dexRepairDesc": "Reparera DEX-filer",
+  "email": "E-post",
+  "emailCond": "Ange en giltig Gmail-adress",
+  "enterEmail": "Ange e-postadress",
+  "enterPassword": "Ange lösenord",
+  "enterUsername": "Ange användarnamn",
+  "flutterAnalysis": "Flutter Analys",
+  "flutterAnalysisDesc": "Analysera Flutter libs",
+  "jniAnalysis": "JNI Analys",
+  "jniAnalysisDesc": "Hitta JNI-signaturer i APK",
+  "language": "Språk: {languageCode}",
   "@language": {
     "description": "Language code",
     "placeholders": {
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "Senare",
+  "login": "Inloggning",
+  "mergeSplitApks": "Slå ihop delade APK:er",
+  "mtHook": "MT krok",
+  "mtHookDesc": "Generera MT-förbättrade krokar",
+  "ok": "OK",
+  "ollama_api_url": "OLLAMA bas-URL",
+  "passLen": "Lösenordet måste vara minst 8 tecken",
+  "passMisMatch": "Lösenorden matchar inte",
+  "password": "Lösenord",
+  "pleaseConfirmPassword": "Bekräfta lösenordet",
+  "preferences": "Inställningar",
+  "profile": "Profil",
+  "register": "Registrera",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Välj språk",
+  "smaliGrammar": "Smali Grammatik",
+  "suggestLogin": "Har du ett konto? Logga in",
+  "suggestRegister": "Behöver du ett konto? Registrera",
+  "theme": "Tema",
+  "update": "Uppdatera",
+  "updateAvailable": "Uppdatering tillgänglig",
+  "updateAvailableMessage": "En ny version av appen finns tillgänglig. Vill du uppdatera nu?",
+  "username": "Användarnamn",
+  "usernameCond": "Användarnamnet kan endast innehålla bokstäver, siffror och understreck",
+  "usernameLimit": "Användarnamnet måste vara mellan 5 och 15 tecken",
+  "welcomeBack": "Välkommen tillbaka!"
 }
