--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1,31 +1,31 @@
 {
-  "about": "About",
-  "apiKey": "API Key",
-  "apiRateLimits": "API Endpoints Rate Limits",
-  "apksToApk": "APKS to APK",
-  "appDescription": "A collection of reverse engineering tools.",
-  "appTitle": "RevEngi",
-  "batteryOptimization": "Battery Optimization",
-  "batteryOptimizationMessage": "For Android 13 and above, We need to disable battery optimization for this app to work properly in the background.",
+  "about": "Про програму",
+  "apiKey": "API ключ",
+  "apiRateLimits": "Ліміт кількості кінцевих точок API",
+  "apksToApk": "APKS до APK",
+  "appDescription": "Колекція альтернативних інструментів.",
+  "appTitle": "Ревенґі",
+  "batteryOptimization": "Оптимізація батареї",
+  "batteryOptimizationMessage": "Для Android 13 і вище необхідно вимкнути оптимізацію заряду акумулятора для коректної роботи у фоновому режимі.",
   "blutter": "Blutter",
-  "blutterDesc": "Flutter binary analysis tool",
-  "cancel": "Cancel",
-  "checkForUpdate": "Check for Updates",
-  "confirmPassword": "Confirm Password",
-  "continueAsGuest": "Continue as Guest",
-  "copiedToClipboard": "Copied to clipboard",
-  "createAccount": "Create Account",
-  "dexRepair": "Dex Repair",
-  "dexRepairDesc": "Repair DEX files",
-  "email": "Email",
-  "emailCond": "Please enter a valid Gmail address",
-  "enterEmail": "Please enter email",
-  "enterPassword": "Please enter password",
-  "enterUsername": "Please enter username",
-  "flutterAnalysis": "Flutter Analysis",
-  "flutterAnalysisDesc": "Analyze Flutter libs",
-  "jniAnalysis": "JNI Analysis",
-  "jniAnalysisDesc": "Find JNI signatures in APK",
+  "blutterDesc": "Програма неточного бінарного аналізу",
+  "cancel": "Скасувати",
+  "checkForUpdate": "Перевірити наявність оновлень",
+  "confirmPassword": "Підтвердити пароль",
+  "continueAsGuest": "Продовжити як гість",
+  "copiedToClipboard": "Скопійовано до буферу обміну",
+  "createAccount": "Створити обл. запис",
+  "dexRepair": "Відновити",
+  "dexRepairDesc": "Відновлення файлів DEX",
+  "email": "Ел. пошта",
+  "emailCond": "Будь ласка, введіть правильну Gmail адресу",
+  "enterEmail": "Будь ласка, уведіть адресу ел. пошти",
+  "enterPassword": "Будь ласка, введіть пароль",
+  "enterUsername": "Будь ласка, введіть ім'я користувача",
+  "flutterAnalysis": "Пробний аналіз",
+  "flutterAnalysisDesc": "Аналізувати очищання",
+  "jniAnalysis": "Аналіз JNI",
+  "jniAnalysisDesc": "Знайти JNI підписи в APK",
   "language": "Language: {languageCode}",
   "@language": {
     "description": "Language code",
@@ -36,31 +36,31 @@
       }
     }
   },
-  "later": "Later",
-  "login": "Login",
-  "mergeSplitApks": "Merge Split APKs",
-  "mtHook": "MT Hook",
-  "mtHookDesc": "Generate MT Enhanced Hooks",
-  "ok": "Ok",
-  "ollama_api_url": "OLLAMA base URL",
-  "passLen": "Password must be at least 8 characters",
-  "passMisMatch": "Passwords do not match",
-  "password": "Password",
-  "pleaseConfirmPassword": "Please confirm password",
-  "preferences": "Preferences",
-  "profile": "Profile",
-  "register": "Register",
+  "later": "Пізніше",
+  "login": "Логін",
+  "mergeSplitApks": "Об'єднати розділені APK",
+  "mtHook": "МТ Хук",
+  "mtHookDesc": "Створити MT посилені хуки",
+  "ok": "Гаразд",
+  "ollama_api_url": "Основний URL OLAMA",
+  "passLen": "Пароль має складатися хоча б з 8 символів",
+  "passMisMatch": "Паролі не збігаються",
+  "password": "Пароль",
+  "pleaseConfirmPassword": "Будь ласка, підтвердіть пароль",
+  "preferences": "Властивості",
+  "profile": "Анкета",
+  "register": "Зареєструватися",
   "reset": "Reset",
-  "selectLanguage": "Select Language",
-  "smaliGrammar": "Smali Grammar",
-  "suggestLogin": "Have an account? Login",
-  "suggestRegister": "Need an account? Register",
-  "theme": "Theme",
-  "update": "Update",
-  "updateAvailable": "Update Available",
-  "updateAvailableMessage": "A new version of the app is available. Would you like to update now?",
-  "username": "Username",
-  "usernameCond": "Username can only contain letters, numbers, and underscore",
-  "usernameLimit": "Username must be between 5 and 15 characters",
-  "welcomeBack": "Welcome Back!"
+  "selectLanguage": "Оберіть мову",
+  "smaliGrammar": "Смалі Граматика",
+  "suggestLogin": "Вже маєте обліковий запис? Увійдіть",
+  "suggestRegister": "Потрібен обліковий запис? Зареєструватися",
+  "theme": "Тема",
+  "update": "Оновити",
+  "updateAvailable": "Доступне оновлення",
+  "updateAvailableMessage": "Доступна нова версія програми. Оновити зараз?",
+  "username": "Ім'я користувача",
+  "usernameCond": "Ім'я користувача може містити лише літери, цифри та підкреслення",
+  "usernameLimit": "Ім'я користувача повинно бути від 5 до 15 символів",
+  "welcomeBack": "З поверненням!"
 }
